stop horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body, html{
+  overflow-x: hidden;
+}
+
 body::before {
   display: block;
   content: '';
